--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#spring.social.facebook.app-id=2123956941119131
+#spring.social.facebook.app-secret=14e7bb08a7a22c4d2d08ce49415c230c
+spring.social.facebook.app-id=${cid}
+spring.social.facebook.app-secret=${secret}
